<?xml version="1.0"?>
<package format="2">
  <name>action_executor</name>
  <version>0.0.0</version>
  <description>Execute robot actions from a database of actions learned from demonstration</description>
  <maintainer email="geoffrey.louie@gmail.com">Geoffrey Louie</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>message_generation</depend>
  <depend>tangy_bringup</depend>
  <depend>drrobot_h20_arm_player</depend>
  <depend>demonstration_learning_msgs</depend>
  <depend>robot_inverse_kinematics</depend>
  <depend>trajectory_executor</depend>
  <depend>text_to_speech</depend>

  <export>
  </export>
</package>
