<?xml version="1.0"?>
<package format="2">
  <name>activity_learner</name>
  <version>0.0.0</version>
  <description>Learn a policy for an activity</description>
  <maintainer email="geoffrey.louie@gmail.com">Geoffrey Louie</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>demonstration_learning_msgs</depend>
  <export>
  </export>
</package>  
