<?xml version="1.0"?>
<package>
  <name>rqt_task_learning</name>
  <version>0.0.0</version>
  <description>The rqt_task_learning package</description>
  <maintainer email="tangy@todo.todo">tangy</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>action_executor</build_depend>
  <build_depend>world_state_identifier</build_depend>
  <build_depend>activity_learner</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>action_executor</run_depend>
  <run_depend>world_state_identifier</run_depend>
  <run_depend>activity_learner</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roslib</run_depend>

  <export>
	  <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
